# AlternateAlchemy

./: .gitignore  CMakeLists.txt  LICENSE  vcpkg-configuration.json  vcpkg.json
scripts/: AlternateAlchemy.psc  AlternateAlchemyConditions.psc  AlternateAlchemyPoisonMonitor.psc
src/: AlternateAlchemy.sln  Directory.Build.props  Hooks.h  Main.cpp  Papyrus.cpp  Papyrus.h  Patches.cpp  Patches.h
src/Plugin/: Plugin.vcxproj  Plugin.vcxproj.filters
src/Plugin/src/: CallPoisonFlagToggleOnAltEquip64.asm  IsPoisonOverride64.asm  Offsets.h  Offsets1.5.97.cpp  Offsets1.6.353.cpp  Offsets1.6.640.cpp  OffsetsGOG.cpp  PapyrusAlternateAlchemy.cpp  PapyrusAlternateAlchemy.h  PatchPotionEquipBehavior.h  PatchPotionEquipBehavior64.cpp  main.cpp
src/Scripts/: AlternateAlchemyPoisonMonitor.psc  AlternateAlchemySyringeHit.psc
